@@ -1235,3 +1235,4 @@ INSERT INTO droits SET id='/groupes/modify_grp_group.php',administrateur='V',pro
 INSERT INTO setting SET name='groupe_de_groupes', value='groupe de groupes';
 INSERT INTO setting SET name='groupes_de_groupes', value='groupes de groupes';
 INSERT INTO droits SET id='/mod_abs2/saisie_bulletin.php',administrateur='F',professeur='F',cpe='V',scolarite='F',eleve='F',responsable='F',secours='F',autre='F',description='Saisie des absences et appréciations sur les bulletins',statut='';
+INSERT INTO droits SET id='/cahier_texte_2/correction_notices_url_absolues_docs_joints.php',administrateur='V',professeur='F',cpe='F',scolarite='F',eleve='F',responsable='F',secours='F',autre='F',description='Correction des notices CDT',statut='';
